<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/rounded_corners">

    <TextView
        android:id="@+id/text_view"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_activity_info"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/charcoal"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <ToggleButton
        android:id="@+id/number_type_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/toggle_button_background"
        android:textColor="@drawable/toggle_button_foreground"
        android:textOn="@string/integer_numbers"
        android:textOff="@string/real_numbers"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@+id/best_direction_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_edit" />

    <ToggleButton
        android:id="@+id/best_direction_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/toggle_button_background"
        android:checked="true"
        android:textColor="@drawable/toggle_button_foreground"
        android:textOff="@string/best_is_min"
        android:textOn="@string/best_is_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_type_toggle"
        app:layout_constraintTop_toBottomOf="@+id/title_text_edit" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/gray"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/number_type_toggle" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/confirm_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_type_toggle" />
</androidx.constraintlayout.widget.ConstraintLayout>
