<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_corners">

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/test_text"
        android:textColor="@drawable/toggle_button_foreground"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/context_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/context_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/gray"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/close_context_menu_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/blue_light_round_button"
                android:contentDescription="@string/edit"
                android:src="@drawable/edit" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/warning_round_button"
                android:contentDescription="@string/delete"
                android:src="@drawable/trash" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/save_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_light_round_button"
                android:contentDescription="@string/save"
                android:src="@drawable/save" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_light_round_button"
                android:contentDescription="@string/share"
                android:src="@drawable/share" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>